--- a/TennisStoreClient/Components/Home/ProductContainer.razor
+++ b/TennisStoreClient/Components/Home/ProductContainer.razor
@@ -4,7 +4,7 @@
         <div class="product-box">
             <ProductBox />
             <DealOfTheDay />
-            <NewProducts />
+            <ProductsGrid />
         </div>
     </div>
 </div>
